# sysinfoviewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  System Info Viewer-0.1.0-x86_64.AppImage  favicon  sysinfo.cpp
.github/workflows/: cmake-single-platform.yml
